# spineagent

./: CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml
deploy/helm/spineagent/: .helmignore  Chart.yaml  values.yaml
deploy/helm/spineagent/templates/: NOTES.txt  _helpers.tpl  configmap-env.yaml  deployment.yaml  ingress.yaml  job.yaml  secret.yaml  service.yaml
docs/llms/: api.md
examples/: quickstart.py
src/agentspine/: __init__.py  conformance.py
src/agentspine/agent/: agent.py  as_tool.py  policy.py  tool_using.py
src/agentspine/llm/: __init__.py  bedrock_provider.py  cohere_provider.py  gemini_provider.py  provider.py
src/agentspine/orchestration/: chain.py  coordinator.py
src/agentspine/protocol/a2a/: seam.py
src/agentspine/protocol/mcp/: seam.py
src/agentspine/tools/: tool.py
src/spineagent/: __init__.py  conformance.py
src/spineagent/agent/: __init__.py  agent.py  as_tool.py  function_calling.py  tool_using.py
src/spineagent/llm/: __init__.py  _mapping.py  bedrock_provider.py  cohere_provider.py  errors.py  gemini_provider.py  provider.py
src/spineagent/orchestration/: __init__.py  chain.py  coordinator.py
src/spineagent/protocol/: __init__.py
src/spineagent/protocol/a2a/: __init__.py  seam.py
src/spineagent/protocol/mcp/: __init__.py  seam.py
src/spineagent/tools/: __init__.py  function_tool.py  tool.py
tests/: test_adapters.py  test_agent.py  test_as_tool.py  test_chain.py  test_conformance.py  test_coordinator.py  test_function_calling.py  test_import_clean.py  test_llm_provider.py  test_mapping.py  test_native_providers.py  test_policy.py  test_protocol_a2a.py  test_protocol_mcp.py  test_tool.py  test_tool_using.py
