[project]
name = "spineagent"
version = "0.0.3"
description = "Spine 家族的通用多 agent 协作框架:agent / tool / 编排 + MCP / A2A 协议缝(离线优先,依赖 corespine)。"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "lin han" }]
keywords = [
    "multi-agent",
    "agent",
    "orchestration",
    "mcp",
    "a2a",
    "seam",
    "conformance",
    "framework-free",
    "offline",
]
# 注:license 用 SPDX 表达式(PEP 639),故【不】再加 "License ::" 分类器(避免与 twine 冲突)。
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
# 默认路径只依赖薄核 corespine,零网络、零重依赖、离线可跑。真实协议 SDK 经下方可选
# extra 延迟 import,核心绝不背任何网络 SDK 运行时依赖。
dependencies = [
    "corespine",
    # 运行时类型契约(对齐家族标准):import/调用期对全包注解强制执行,与 mypy --strict
    # 的静态半边互补。守护式 import(见 src/spineagent/__init__.py)使其缺失时仍可离线
    # 运行,但列为核心依赖以保证质量门默认开启。
    "beartype>=0.18",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.9.0", "mypy>=1.11"]
# 协议真实后端的占位 extra:仅在显式选用时安装,默认离线路径永不触碰。
mcp = ["mcp"]
a2a = ["a2a-sdk"]
# 真实 LLM provider 的可选 extra:各走官方 SDK 延迟 import,默认离线路径(MockProvider)不触碰。
# OpenAI 兼容端点(Together/Groq/DeepSeek/Mistral/xAI/Qwen/Ollama/vLLM…)统一走 [openai] 的 base_url;
# 非 OpenAI 原生(anthropic/cohere/…)各有原生适配器、各走自己的 extra。
anthropic = ["anthropic"]
openai = ["openai"]
cohere = ["cohere"]
gemini = ["google-genai"]
bedrock = ["boto3"]
# 一键装齐全部协议后端 + LLM provider(不含开发用 dev)。自引用聚合,改子 extra 无需同步维护。
all = ["spineagent[mcp,a2a,anthropic,openai,cohere,gemini,bedrock]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spineagent"]

# 面向 AI 消费的使用文档随 wheel 一起装入 site-packages/spineagent/_llms/,装后可离线读。
# force-include:把仓库根的文档文件 / 目录映射到 wheel 内的包子目录(源路径 → wheel 内路径)。
[tool.hatch.build.targets.wheel.force-include]
"llms.txt" = "spineagent/_llms/llms.txt"
"docs/llms" = "spineagent/_llms/docs"

# 本地开发把 corespine 指向同家族目录里的源码(可编辑);发布层面二者各自独立发版。
[tool.uv.sources]
corespine = { path = "../corespine", editable = true }

[tool.ruff]
line-length = 100
target-version = "py310"
# src 布局:把 src/ 标为第一方根,isort(I 规则)才能把 `import spineagent` 正确归到一方分组。
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # 行宽不作硬门槛(中文注释易超 100 列);其余风格 / import 序 / 死代码照常 gate。

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/spineagent"]

# 真实 LLM / 协议 SDK 都经可选 extra 延迟 import,默认 dev 环境【不】装,且多数无 type stub。
# 对这些延迟 import 的后端关掉 "缺 import / 无 stub" 报错,避免误报;核心出货代码照常 strict。
[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "openai.*",
    "cohere.*",
    "google.genai.*",
    "boto3.*",
    "mcp.*",
    "a2a.*",
]
ignore_missing_imports = true
